Change findc to search for all fields except Remark